# Battle-CP

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  deploy_backend.sh  deploy_gcp.sh  deploy_oracle.sh  docker-compose.yml  nginx_battlecp.conf  oracle_anti_idle.sh  oracle_setup.sh  rules.md
.cph/: .A_Average_Height.cpp_bf8de58de46fcaf2caf53e9c38b56c68.prob  .A_Raising_Bacteria.cpp_5ae728c17bff92bf80a264424817f5e7.prob  .B_Block_Towers.cpp_8b72c5103b9e3b0bb3abad42efd870d0.prob
.github/workflows/: deploy-oracle.yml
backend/: Cargo.toml  Dockerfile  test_conn.py
backend/data/: problems.json
backend/src/: background.rs  cf_client.rs  discord.rs  game.rs  handlers.rs  lib.rs  main.rs  protocol.rs  state.rs  ws.rs
backend/tests/: game_integration.rs  realistic_tournament.rs  stress.rs  ws_integration.rs
docs/: CODEBASE.md  DEPLOYMENT.md  LEARNING_RUST.md  PRD.md  ULTIMATE_AXUM_GUIDE.md  deployment.md
frontend/: .env.example  .gitignore  .vade-report  next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
frontend/context/: MusicContext.tsx  SoundContext.tsx
frontend/hooks/: useGameSocket.ts
frontend/lib/: backendUrls.ts
frontend/scripts/: sync-assets.mjs
frontend/types/: game.ts
private_learning/: DEPLOYMENT.md
scripts/: build_problem_db.py  cf_problem_stats.py  pre_deploy.sh  stress_test.py  stress_test_prod.py  stress_test_v2.py  stress_test_v3.py  tournament_realistic_test.py  tournament_stress_test.py
(+21 files in other folders)
