[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
anyhow = "1.0.100"

[dev-dependencies]
tokio-tungstenite = "0.21.0"
url = "2.5.7"
